[package]
edition = "2024"
name = "twilight-line-rust"
description = "another tunnel proxy"
version = "1.0.0"
authors = ["kaien <kaienkira@gmail.com>"]
publish = false

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
tokio = { version = "1.44.1", features = ["full"] }

[[bin]]
name = "twilight-line-rust-client"
path = "src/client/main.rs"

[[bin]]
name = "twilight-line-rust-server"
path = "src/server/main.rs"
